--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -464,7 +464,7 @@
 	input[type="reset"],
 	button,
 	.button {
-		@include vendor('background-image', ('url("images/bg.png")', 'linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2))'));
+		@include vendor('background-image', ('url("images/bg.png")', 'linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2))'));
 		@include vendor('transition', 'background-color .2s ease-in-out');
 		-webkit-appearance: none;
 		position: relative;
@@ -560,7 +560,7 @@
 				position: relative;
 
 				&:before {
-					@include vendor('background-image', ('url("images/bg.png")', 'linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2))'));
+					@include vendor('background-image', ('url("images/bg.png")', 'linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2))'));
 					@include vendor('transition', 'background-color .2s ease-in-out');
 					background-color: #444;
 					border-radius: 6px;
